<resources>
    <string name="app_name">ITPMIntroductionApp</string>
    <string name="intro_title">未来のITエンジニア</string>
    <string name="intro_sub_title">理想の働き方を手に入れよう！</string>
    <string name="msg_intro_btn">スタート</string>
    <string name="welcome">ようこそ ITPMへ</string>
    <string name="sakamoto_name">坂本 将紀</string>
    <string name="searching_for">検索...</string>
    <string name="see_all">すべて見る</string>
    <string name="info">Info</string>
    <string name="people">People</string>
    <string name="description">説明</string>
    <string name="good">いいね</string>
    <string name="department_1">営業部</string>
    <string name="department_2">HR統括部</string>
    <string name="department_3">ITS</string>
    <string name="department_4">管理部</string>
    <string name="educational_program">教育プログラム</string>
    <string name="educational_program_address">株式会社ITPM本社・会議室</string>
    <string name="educational_program_description">エンジニアとしてのスキルアップはもちろん、社会人として必要なビジネススキルアップもフォローしています。\nビジネスマナー研修では、ビジネスマナーの「基本」を学びます。挨拶、身だしなみ・正しい言葉づかい・職場でのマナーなど、社会人としての大切な研修です。\nITセミナーでは、「エンジニアの仕事って？」「PMOの仕事って？」などなど、IT業界のいろはをIT業界のスペシャリスト達から丁寧に教えてもらい、学ぶ大切な研修です\nそれ以外にもスキルアップの場として勉強会の実施を行ったりしています。</string>
    <string name="curry_grand_prix_2023">神田カレーグランプリ 2023</string>
    <string name="curry_grand_prix_2023_address">神田カレー街</string>
    <string name="curry_grand_prix_2023_description">400店以上が集まる日本有数のカレーの聖地神田のカレーを食べ尽くし、栄光の神田カレーマイスターを目指すイベント「神田カレー街食べ歩きスタンプラリー2023」\n千代田区観光教会観光大使のリラックマも応援してくれています。\n株式会社ITPMは神田カレーグランプリのサポーターとして参加、応援しています。</string>
    <string name="itpm_conference_and_exhibition">ICE 2023 JUNE</string>
    <string name="itpm_conference_and_exhibition_address">oVice（ヴァーチャルオフィス）</string>
    <string name="itpm_conference_and_exhibition_description">ITPM社員がITに関する情報交換や意見を出し合うことができる社内イベント「ITPM CONFERENCE AND EXHIBITION」略して「ICE（アイス）」。\nITPM社員が現場で得た技術や、目標業務に向けて努力してきた成果の共有の場。\nまた、同じ社員同士でも行っている業務は様々、というSESの特徴を逆に活かし、自分がまだ経験していないITの業務知識やノウハウについて共有できる場を提供できないかと考えたのがきっかけです。\n３回目となるMelon ICEでは「拡張」をテーマとしており、前回に引き続き今回もハッカソンに挑戦しました\nまた、発表においても様々な「拡張」について発表を行いました。</string>
    <string name="liked">いいねをしました。</string>
    <string name="management_people_title">管理部の人々</string>
    <string name="management_people_address">株式会社ITPM本社・執務室</string>
    <string name="management_people_description"></string>
    <string name="sales_department_people_title">営業部の人々</string>
    <string name="sales_department_people_address">株式会社ITPM本社・ファミレス席</string>
    <string name="sales_department_people_description"></string>
    <string name="its_people_title">ITSの人々</string>
    <string name="its_people_address">株式会社ITPM本社・会議室</string>
    <string name="its_people_description"></string>
    <string name="hr_department_people_title">HR統括部の人々</string>
    <string name="hr_department_people_address">株式会社ITPM本社・執務室</string>
    <string name="hr_department_people_description"></string>
</resources>
